--- a/551A1.ipynb
+++ b/551A1.ipynb
@@ -810,19 +810,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "71f6a440-4d80-4920-9221-67f35fd365f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "[[1.00000000e+00 7.10302306e-05 1.80000000e-01 ... 9.99985242e-01\n",
+      "  9.99995248e-01 9.99874541e-01]\n",
+      " [1.00000000e+00 3.06936012e-04 0.00000000e+00 ... 9.99990508e-01\n",
+      "  9.99917342e-01 9.99870446e-01]\n",
+      " [1.00000000e+00 3.06711233e-04 0.00000000e+00 ... 9.99990508e-01\n",
+      "  9.99965313e-01 9.99916763e-01]\n",
+      " ...\n",
+      " [1.00000000e+00 6.82879242e-04 0.00000000e+00 ... 9.99998261e-01\n",
+      "  9.99999977e-01 9.99873642e-01]\n",
+      " [1.00000000e+00 1.23167768e-03 0.00000000e+00 ... 9.99998261e-01\n",
+      "  9.99992000e-01 9.99868552e-01]\n",
+      " [1.00000000e+00 5.32839119e-04 0.00000000e+00 ... 9.99998261e-01\n",
+      "  9.99957137e-01 9.99981479e-01]]\n"
+     ]
+    }
+   ],
    "source": [
     "#Task 3 Part 7 \n",
     "\n",
+    "\n",
     "def gaussian(x, mu):\n",
     "    return np.exp(-((x-mu)**2)/2)\n",
+    "    \n",
     "X=cleaneddbnp\n",
+    "Y=cleaneddbtargets\n",
+    "numGaussians=5\n",
+    "for columnnum in range(len(X[0])-numGaussians, len(X[0])):\n",
+    "    averagex=np.average(column(X, columnnum))\n",
+    "    for n in range(len(X))/2:\n",
+    "        X[n][columnnum]=gaussian(X[n][columnnum], averagex)\n",
     "\n",
+    "linreg=LinReg(X[len(X)/2+1], Y)\n",
+    "linreg.fit()\n",
+    "predictedYwgaussian=linreg.predictlinear\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c072738-e0a4-4349-a543-fc36d109381e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
