--- a/551A1.ipynb
+++ b/551A1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "33dee442-5192-4905-a268-8a86a3ad3069",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Shiyan Liu\\AppData\\Local\\Temp\\ipykernel_4804\\196126868.py:29: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Shiyan Liu\\AppData\\Local\\Temp\\ipykernel_280\\1181958334.py:29: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  if winefeatures.iloc[0][0]!=1:\n",
-      "C:\\Users\\Shiyan Liu\\AppData\\Local\\Temp\\ipykernel_4804\\196126868.py:46: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Shiyan Liu\\AppData\\Local\\Temp\\ipykernel_280\\1181958334.py:46: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  if cleaneddb.iloc[0][0]!=1:\n"
      ]
     }
@@ -60,7 +60,7 @@
     "        \n",
     "winetargets = [wine.data.targets.to_numpy()[i][0] for i in range(len(wine.data.targets.to_numpy()))]\n",
     "\n",
-    "bostondb=pd.read_csv(\".ipynb_checkpoints/boston.csv\")\n",
+    "bostondb=pd.read_csv(\"boston.csv\")\n",
     "cleaneddb=bostondb.drop(bostondb.columns[11], axis=1)\n",
     "#inserting bias\n",
     "if cleaneddb.iloc[0][0]!=1:\n",
