--- a/551A1.ipynb
+++ b/551A1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "33dee442-5192-4905-a268-8a86a3ad3069",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Shiyan Liu\\AppData\\Local\\Temp\\ipykernel_280\\1181958334.py:29: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Shiyan Liu\\AppData\\Local\\Temp\\ipykernel_24024\\1181958334.py:29: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  if winefeatures.iloc[0][0]!=1:\n",
-      "C:\\Users\\Shiyan Liu\\AppData\\Local\\Temp\\ipykernel_280\\1181958334.py:46: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Shiyan Liu\\AppData\\Local\\Temp\\ipykernel_24024\\1181958334.py:46: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  if cleaneddb.iloc[0][0]!=1:\n"
      ]
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "07fc594f-de14-40aa-8a4f-11931fcf1369",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "de6f2731-474f-4128-9f2c-9bb7563f8342",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "018ae088-b777-42ee-9013-62f7d4594f97",
    "metadata": {},
    "outputs": [
@@ -336,28 +336,28 @@
      "output_type": "stream",
      "text": [
       "Analytical loss is: 9.838809950942512e-27\n",
-      "SGD loss is: 0.0959967648644537\n",
+      "SGD loss is: 0.09599676486445374\n",
       "Metrics are:\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'accuracy': 0.8611111111111112,\n",
-       "  'precision': 0.9230769230769231,\n",
-       "  'recall': 0.75,\n",
-       "  'f1': 0.8275862068965517},\n",
-       " {'accuracy': 0.8857142857142857,\n",
-       "  'precision': 0.7333333333333333,\n",
-       "  'recall': 1.0,\n",
-       "  'f1': 0.846153846153846},\n",
-       " {'accuracy': 0.96875,\n",
+       "[{'accuracy': 0.8888888888888888,\n",
        "  'precision': 1.0,\n",
-       "  'recall': 0.8888888888888888,\n",
-       "  'f1': 0.9411764705882353}]"
+       "  'recall': 0.7142857142857143,\n",
+       "  'f1': 0.8333333333333333},\n",
+       " {'accuracy': 0.9411764705882353,\n",
+       "  'precision': 0.8571428571428571,\n",
+       "  'recall': 1.0,\n",
+       "  'f1': 0.923076923076923},\n",
+       " {'accuracy': 0.9411764705882353,\n",
+       "  'precision': 0.8333333333333334,\n",
+       "  'recall': 1.0,\n",
+       "  'f1': 0.9090909090909091}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,9 +365,9 @@
    "source": [
     "#Task 3 Part 1\n",
     "\n",
-    "X=cleaneddbnp\n",
+    "X=copy.deepcopy(cleaneddbnp)\n",
     "\n",
-    "Y=cleaneddbtargets\n",
+    "Y=copy.deepcopy(cleaneddbtargets)\n",
     "\n",
     "cutoff=int(np.floor(0.8*len(X)))\n",
     "Xtraining=X[:cutoff]\n",
@@ -385,11 +385,11 @@
     "\n",
     "print(\"SGD loss is:\", mblinearregression.getMSE(Xtest, Ytest))\n",
     "\n",
-    "X=winefeaturesnp\n",
+    "X=copy.deepcopy(winefeaturesnp)\n",
     "\n",
     "#Need to transform any new data in the same\n",
     "\n",
-    "Y=winetargets\n",
+    "Y=copy.deepcopy(winetargets)\n",
     "\n",
     "cutoff=int(np.floor(0.8*len(X)))\n",
     "indices=randindices(X, cutoff)\n",
@@ -650,8 +650,8 @@
    "source": [
     "#Task 3 Part 4:\n",
     "\n",
-    "X=cleaneddbnp\n",
-    "Y=cleaneddbtargets\n",
+    "X=copy.deepcopy(cleaneddbnp)\n",
+    "Y=copy.deepcopy(cleaneddbtargets)\n",
     "for pow in range(1,8):\n",
     "    linregwsgd=LinReg(X, Y, 2**pow)\n",
     "    starttime=time.time()\n",
@@ -699,8 +699,8 @@
    "source": [
     "#Task 3 Part 5:\n",
     "\n",
-    "X=cleaneddbnp\n",
-    "Y=cleaneddbtargets\n",
+    "X=copy.deepcopy(cleaneddbnp)\n",
+    "Y=copy.deepcopy(cleaneddbtargets)\n",
     "for pow in range(-2, -5, -1):\n",
     "    linregwsgd=LinReg(X, Y)\n",
     "    starttime=time.time()\n",
@@ -709,8 +709,8 @@
     "    print(\"Execution time for learning rate %f with linear regression is: %f seconds\" % (alpha, time.time()-starttime))\n",
     "    print(\"Error is %f\" % linregwsgd.getMSE(X,Y))\n",
     "    \n",
-    "X=winefeaturesnp\n",
-    "Y=winetargets\n",
+    "X=copy.deepcopy(winefeaturesnp)\n",
+    "Y=copy.deepcopy(winetargets)\n",
     "\n",
     "for pow in range(-2,-5, -1):\n",
     "    logreg=LogReg(X, Y, 64)\n",
@@ -763,8 +763,8 @@
     "because our analytical solution gives a loss function of around e-27, which is exactly what you would expect for the analytical solution. As such, \n",
     "I'm going to choose the parameters that gets me closest to the smallest loss function.\"\"\"\n",
     "\n",
-    "X=cleaneddbnp\n",
-    "Y=cleaneddbtargets\n",
+    "X=copy.deepcopy(cleaneddbnp)\n",
+    "Y=copy.deepcopy(cleaneddbtargets)\n",
     "optimalparameters=None\n",
     "minloss=float('inf')\n",
     "for epspow in range(-1, -4, -1):\n",
@@ -787,8 +787,8 @@
     "since for a softmax classification, we really want to know that if we PREDICT something to be of class c, what is the the probability that it \n",
     "actually IS of class C, and we'll be taking the average recall across the different classes. \"\"\"\n",
     "\n",
-    "X=winefeaturesnp\n",
-    "Y=winetargets\n",
+    "X=copy.deepcopy(winefeaturesnp)\n",
+    "Y=copy.deepcopy(winetargets)\n",
     "optimalparameters=None\n",
     "maxrecall=0\n",
     "for batchpow in range(1,7):\n",
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "id": "71f6a440-4d80-4920-9221-67f35fd365f4",
    "metadata": {},
    "outputs": [
@@ -818,55 +818,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test\n",
-      "test\n",
-      "test\n",
-      "test\n",
-      "test\n",
-      "[[1.00000000e+00 7.10302306e-05 1.80000000e-01 ... 9.99985242e-01\n",
-      "  9.99995248e-01 9.99874541e-01]\n",
-      " [1.00000000e+00 3.06936012e-04 0.00000000e+00 ... 9.99990508e-01\n",
-      "  9.99917342e-01 9.99870446e-01]\n",
-      " [1.00000000e+00 3.06711233e-04 0.00000000e+00 ... 9.99990508e-01\n",
-      "  9.99965313e-01 9.99916763e-01]\n",
-      " ...\n",
-      " [1.00000000e+00 6.82879242e-04 0.00000000e+00 ... 9.99998261e-01\n",
-      "  9.99999977e-01 9.99873642e-01]\n",
-      " [1.00000000e+00 1.23167768e-03 0.00000000e+00 ... 9.99998261e-01\n",
-      "  9.99992000e-01 9.99868552e-01]\n",
-      " [1.00000000e+00 5.32839119e-04 0.00000000e+00 ... 9.99998261e-01\n",
-      "  9.99957137e-01 9.99981479e-01]]\n"
+      "7803.247403038759\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'X=copy.deepcopy(cleaneddbnp)\\nY=copy.deepcopy(cleaneddbtargets)\\n\\nlinreg=LinReg(X[:len(X)//2], Y[:len(X)//2])\\nlinreg.fitlinear()\\npredictedYwogaussian=linreg.predictlinear(X[len(X)//2:])\\n\\ndifference=[predictedYwgaussian[i]-predictedYwogaussian[i] for i in range(len(predictedYwgaussian))]\\nprint(difference)\\nprint(\"Average difference between gaussian and no gaussian is %f\", np.average(difference))'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Task 3 Part 7 \n",
     "\n",
+    "#Using the first half to train, and the second half to test.\n",
     "\n",
     "def gaussian(x, mu):\n",
     "    return np.exp(-((x-mu)**2)/2)\n",
     "    \n",
-    "X=cleaneddbnp\n",
-    "Y=cleaneddbtargets\n",
+    "X=copy.deepcopy(cleaneddb.to_numpy())\n",
+    "Y=copy.deepcopy(bostondb[\"MEDV\"].to_numpy())\n",
     "numGaussians=5\n",
+    "\n",
     "for columnnum in range(len(X[0])-numGaussians, len(X[0])):\n",
     "    averagex=np.average(column(X, columnnum))\n",
-    "    for n in range(len(X))/2:\n",
+    "    for n in range(len(X)):\n",
     "        X[n][columnnum]=gaussian(X[n][columnnum], averagex)\n",
     "\n",
-    "linreg=LinReg(X[len(X)/2+1], Y)\n",
-    "linreg.fit()\n",
-    "predictedYwgaussian=linreg.predictlinear\n",
-    "\n"
+    "\n",
+    "linreg=LinReg(X,Y)\n",
+    "linreg.fitlinear()\n",
+    "predictedYwgaussian=linreg.predictlinear(X)\n",
+    "print(linreg.getMSE(X,Y))\n",
+    "\n",
+    "\"\"\"X=copy.deepcopy(cleaneddbnp)\n",
+    "Y=copy.deepcopy(cleaneddbtargets)\n",
+    "\n",
+    "linreg=LinReg(X[:len(X)//2], Y[:len(X)//2])\n",
+    "linreg.fitlinear()\n",
+    "predictedYwogaussian=linreg.predictlinear(X[len(X)//2:])\n",
+    "\n",
+    "difference=[predictedYwgaussian[i]-predictedYwogaussian[i] for i in range(len(predictedYwgaussian))]\n",
+    "print(difference)\n",
+    "print(\"Average difference between gaussian and no gaussian is %f\", np.average(difference))\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8c072738-e0a4-4349-a543-fc36d109381e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.9341805993800416e-26\n",
+      "1.559461118920303\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Task 3 Part 8:\n",
+    "X=copy.deepcopy(cleaneddbnp)\n",
+    "Y=copy.deepcopy(cleaneddbtargets)\n",
+    "\n",
+    "analyticallinreg=LinReg(X,Y)\n",
+    "analyticallinreg.fitlinear()\n",
+    "print(analyticallinreg.getMSE(X,Y))\n",
+    "\n",
+    "X=copy.deepcopy(cleaneddbnp)\n",
+    "Y=copy.deepcopy(cleaneddbtargets)\n",
+    "\n",
+    "mblinreg=LinReg(X,Y, 64)\n",
+    "mblinreg.fitlogistic(0.01, 0.1)\n",
+    "print(mblinreg.getMSE(X,Y))\n",
+    "\n",
+    "\"\"\"We see the error on the SGD gradient descent linear regression has much higher error, so it is not preferable over the analytical \n",
+    "solution in this case. However, since the time complexity for analytical regression is higher than SGD, as the size of the input database\n",
+    "increases, we will see that SGD becomes preferable over the analytical solution due to the runtime of the algorithm.\"\"\""
+   ]
   }
  ],
  "metadata": {
