--- a/551A1.ipynb
+++ b/551A1.ipynb
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "71f6a440-4d80-4920-9221-67f35fd365f4",
    "metadata": {},
    "outputs": [
@@ -891,15 +891,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average difference between dataset with 5 Gaussian features and the unchanged one is 0.011122\n",
-      "Average difference between dataset with 6 Gaussian features and the unchanged one is 0.008819\n",
-      "Average difference between dataset with 7 Gaussian features and the unchanged one is 0.007742\n",
-      "Average difference between dataset with 8 Gaussian features and the unchanged one is 0.010491\n",
-      "Average difference between dataset with 9 Gaussian features and the unchanged one is 0.008599\n",
-      "Average difference between dataset with 10 Gaussian features and the unchanged one is 0.008140\n",
-      "Average difference between dataset with 11 Gaussian features and the unchanged one is 0.008661\n",
-      "Average difference between dataset with 12 Gaussian features and the unchanged one is 0.008945\n",
-      "Average difference between dataset with 13 Gaussian features and the unchanged one is 0.007871\n"
+      "Average difference between dataset with 5 Gaussian features and the unchanged one is 0.123807\n",
+      "Average difference between dataset with 6 Gaussian features and the unchanged one is 0.108600\n",
+      "Average difference between dataset with 7 Gaussian features and the unchanged one is 0.104962\n",
+      "Average difference between dataset with 8 Gaussian features and the unchanged one is 0.108272\n",
+      "Average difference between dataset with 9 Gaussian features and the unchanged one is 0.103286\n",
+      "Average difference between dataset with 10 Gaussian features and the unchanged one is 0.094093\n",
+      "Average difference between dataset with 11 Gaussian features and the unchanged one is 0.093791\n",
+      "Average difference between dataset with 12 Gaussian features and the unchanged one is 0.107588\n",
+      "Average difference between dataset with 13 Gaussian features and the unchanged one is 0.094793\n"
      ]
     }
    ],
@@ -937,7 +937,7 @@
     "\n",
     "    err=gaussianlinreg.getMSE(Xtest, Ytest)\n",
     "    difference=[abs(gaussianlinreg.predictlinear(Xtest)[i]-Ytest[i]) for i in range(len(Ytest))]\n",
-    "    print(\"Average difference between dataset with %d Gaussian features and the unchanged one is %f\" %(numGaussians, err ))"
+    "    print(\"Average difference between dataset with %d Gaussian features and the unchanged one is %f\" %(numGaussians, np.average(difference) ))"
    ]
   },
   {
@@ -983,7 +983,39 @@
       "Error for the same parameters with no momentum is 0.001788, with a runtime of 0.171998\n",
       "Error for batch size of 128 with beta of 0.980000 is 0.001652, with a runtime of 0.344020\n",
       "Error for the same parameters with no momentum is 0.001789, with a runtime of 0.290418\n",
-      "Dataset 2: Wine\n"
+      "Dataset 2: Wine\n",
+      "Error for batch size of 16 with beta of 0.950000 is -0.122881, with a runtime of 6.896176\n",
+      "Error for the same parameters with no momentum is -0.253930, with a runtime of 0.225925\n",
+      "Error for batch size of 32 with beta of 0.950000 is -0.177300, with a runtime of 15.967521\n",
+      "Error for the same parameters with no momentum is -0.476473, with a runtime of 0.112001\n",
+      "Error for batch size of 64 with beta of 0.950000 is -0.463702, with a runtime of 4.210407\n",
+      "Error for the same parameters with no momentum is -0.215031, with a runtime of 1.824157\n",
+      "Error for batch size of 128 with beta of 0.950000 is -0.729588, with a runtime of 10.160762\n",
+      "Error for the same parameters with no momentum is -1.366719, with a runtime of 16.470783\n",
+      "Error for batch size of 16 with beta of 0.960000 is -0.127332, with a runtime of 11.622149\n",
+      "Error for the same parameters with no momentum is -0.137346, with a runtime of 0.075972\n",
+      "Error for batch size of 32 with beta of 0.960000 is -0.191398, with a runtime of 1.486156\n",
+      "Error for the same parameters with no momentum is -0.365802, with a runtime of 0.677089\n",
+      "Error for batch size of 64 with beta of 0.960000 is -0.318163, with a runtime of 6.304029\n",
+      "Error for the same parameters with no momentum is -0.268183, with a runtime of 1.470819\n",
+      "Error for batch size of 128 with beta of 0.960000 is -0.625404, with a runtime of 89.647584\n",
+      "Error for the same parameters with no momentum is -1.310401, with a runtime of 18.303388\n",
+      "Error for batch size of 16 with beta of 0.970000 is -0.096691, with a runtime of 10.893783\n",
+      "Error for the same parameters with no momentum is -0.276027, with a runtime of 0.357920\n",
+      "Error for batch size of 32 with beta of 0.970000 is -0.178798, with a runtime of 2.169955\n",
+      "Error for the same parameters with no momentum is -0.351278, with a runtime of 0.296009\n",
+      "Error for batch size of 64 with beta of 0.970000 is -0.253036, with a runtime of 23.164730\n",
+      "Error for the same parameters with no momentum is -0.343596, with a runtime of 0.794075\n",
+      "Error for batch size of 128 with beta of 0.970000 is -0.520518, with a runtime of 71.565392\n",
+      "Error for the same parameters with no momentum is -1.255612, with a runtime of 20.171915\n",
+      "Error for batch size of 16 with beta of 0.980000 is -0.107314, with a runtime of 12.486255\n",
+      "Error for the same parameters with no momentum is -0.396138, with a runtime of 0.142932\n",
+      "Error for batch size of 32 with beta of 0.980000 is -0.124978, with a runtime of 27.401010\n",
+      "Error for the same parameters with no momentum is -0.185811, with a runtime of 0.200900\n",
+      "Error for batch size of 64 with beta of 0.980000 is -0.184365, with a runtime of 52.685056\n",
+      "Error for the same parameters with no momentum is -0.165823, with a runtime of 0.899381\n",
+      "Error for batch size of 128 with beta of 0.980000 is -0.374266, with a runtime of 100.905148\n",
+      "Error for the same parameters with no momentum is -1.214651, with a runtime of 21.340945\n"
      ]
     }
    ],
